--- a/source/index.html
+++ b/source/index.html
@@ -61,7 +61,7 @@
   <!-- Навигационное меню (закрытое) start -->
   <div class="menu-hide">
     <!--  menu-hide__hide-top -->
-    <div class="menu-hide__hide menu-hide__hide-add ">
+    <div class="menu-hide__hide menu-hide__hide-add">
       <!--  menu-hide__hide-add -->
       <a class="menu-hide__logo" href="index.html">
         <img class="menu-hide__pic" src="img/logotype-mobile.svg" alt="Логотип «Седона»">
@@ -156,7 +156,8 @@
         <div class="reasons__items-wrapper">
           <div class="reasons__items-special reasons__items-block-inner">
             <span class="reasons__triangle-bottom"></span>
-            <div class="reasons__items-block reasons__items-block-special reasons__items-block-special-one">
+            <div class="reasons__items-block reasons__items-block-special-one">
+              <!--  reasons__items-block-special -->
               <h3 class="reasons__items-header">
                 НАСТОЯЩИЙ<br class="reasons__items-br"> ГОРОДОК
               </h3>
