--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale = 1, maximum-scale = 1, user-scalable = no, width = device-width">
+  <link rel="icon" href="img/favicon-16x16.ico" sizes="16x16" type="image/png">
+  <link rel="apple-touch-icon" href="img/favicon-32x32.ico" sizes="32x32">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
   <title>HTML Academy: Седона</title>
@@ -234,9 +236,9 @@
           <span class="materials__lines-video-right"></span>
           <span class="materials__lines-video-left"></span>
           <picture>
-            <source type="image/svg+xml" media="(min-width: 1200px)" srcset="img/video-desktop.jpg">
-            <source type="image/svg+xml" media="(min-width: 768px)" srcset="img/video-tablet.jpg">
-            <img class="materials__video-pic" src="img/video-mobile.jpg" alt="Пейзаж">
+            <source type="image/svg+xml" media="(min-width: 1200px)" srcset="img/video-catalog-desktop-1x.jpg 1x, img/video-catalog-desktop-2x.jpg 2x">
+            <source type="image/svg+xml" media="(min-width: 768px)" srcset="img/video-catalog-tablet-1x.jpg 1x, img/video-catalog-tablet-2x.jpg 2x">
+            <img class="materials__video-pic" src="img/video-catalog-mobile-1x.jpg" srcset="img/video-catalog-mobile-2x.jpg 2x" alt="Пейзаж">
           </picture>
         </div>
         <div class="materials__player" tabindex="0">
